--- a/force-app/main/default/classes/GGW_GrantApplicationWrapper.cls
+++ b/force-app/main/default/classes/GGW_GrantApplicationWrapper.cls
@@ -16,4 +16,7 @@ public class GGW_GrantApplicationWrapper {
     @AuraEnabled public String language;
     @AuraEnabled public List<GGW_SectionWrapper> unselectSectionList; // Used to add new sections to Grant
     @AuraEnabled public List<GGW_ContentBlockWrapper> selectedContentBlock; // Include Section and Text block
+    public GGW_GrantApplicationWrapper(){
+        this.language = 'en_US'; // default
+    }
 }
